--- a/index.html
+++ b/index.html
@@ -75,3 +75,12 @@ footer {
     text-align: center;
     padding: 10px;
 }
+function showEventDetails() {
+    var eventDetails = document.getElementById('event-details');
+    if (eventDetails.style.display === 'none') {
+        eventDetails.style.display = 'block';
+    } else {
+        eventDetails.style.display = 'none';
+    }
+}
+
