--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section id="promo-video">
             <h2>游戏宣传视频</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=H5HO_tUErg8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/H5HO_tUErg8?si=U_FFcBAZHWw8BUSN" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <section id="events">
