--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section id="promo-video">
             <h2>游戏宣传视频</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/视频ID" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <section id="events">
