--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         <button onclick="submitFeedback()">Submit Feedback</button>
     </div>
 
+    <div id="share">
+        <h2>Share with Friends</h2>
+        <button onclick="shareOnSocialMedia()">Share on Social Media</button>
+    </div>
+
+    <div id="subscribe">
+        <h2>Subscribe to Updates</h2>
+        <input type="email" id="emailInput" placeholder="Enter your email">
+        <button onclick="subscribe()">Subscribe</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
