--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
     <h1>Welcome to Genshin Impact Promotion</h1>
 
+    <div id="video">
+        <h2>Game Trailer</h2>
+        <video controls width="400">
+        <source src="https://www.youtube.com/watch?v=zQk1QHm2-Cw" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+    </div>
+
     <div id="characterInfo">
         <h2>Character Information</h2>
         <p id="characterName">No Character Selected</p>
