--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Welcome to Genshin Impact Promotion</h1>
+    <h1>Welcome to Genshin Impact</h1>
 
     <div id="video">
         <h2>Game Trailer</h2>
