--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Welcome to Genshin Impact</h1>
+    <h1>Welcome to Genshin Impact</h1><hr>
 
     <div id="video" class="container">
         <h2>Game Trailer</h2>
@@ -16,13 +16,13 @@
         <source src="https://www.youtube.com/watch?v=zQk1QHm2-Cw" type="video/mp4">
         Your browser does not support the video tag.
         </video>
-    </div>
+    </div><hr>
 
     <div id="characterInfo" class="container">
         <h2>Character Information</h2>
         <p id="characterName">No Character Selected</p>
         <button onclick="selectCharacter()">Select Character</button>
-    </div>
+    </div><hr>
 
     <div id="events" class="container">
         <h2>Upcoming Events</h2>
@@ -30,24 +30,24 @@
             <!-- Event items will be added dynamically using JavaScript -->
         </ul>
         <button onclick="loadEvents()">Load Events</button>
-    </div>
+    </div><hr>
 
     <div id="feedback" class="container">
         <h2>Feedback</h2>
         <textarea id="feedbackInput" placeholder="Provide your feedback"></textarea>
         <button onclick="submitFeedback()">Submit Feedback</button>
-    </div>
+    </div><hr>
 
     <div id="share" class="container">
         <h2>Share with Friends</h2>
         <button onclick="shareOnSocialMedia()">Share on Social Media</button>
-    </div>
+    </div><hr>
 
     <div id="subscribe" class="container">
         <h2>Subscribe to Updates</h2>
         <input type="email" id="emailInput" placeholder="Enter your email">
         <button onclick="subscribe()">Subscribe</button>
-    </div>
+    </div><hr>
 
     <script src="script.js"></script>
 </body>
