--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Welcome to Genshin Impact</h1><hr>
+    <h1>Welcome to Genshin Impact</h1>
 
     <div id="video" class="container">
         <h2>Game Trailer</h2>
