--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <h2>Subscribe to Updates</h2>
         <input type="email" id="emailInput" placeholder="Enter your email">
         <button onclick="subscribe()">Subscribe</button>
+        <p id="errorText" style="color: red;"></p>
     </div>
 
     <script src="script.js"></script>
