--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
     <div id="video" class="container">
         <h2>Game Trailer</h2>
-        <video controls width="400">
-        <source src="https://www.youtube.com/watch?v=zQk1QHm2-Cw" type="video/mp4">
-        Your browser does not support the video tag.
-        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zQk1QHm2-Cw?si=1OtOrC7tiOYIqQuc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div id="characterInfo" class="container">
