--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h2>Feedback</h2>
         <textarea id="feedbackInput" placeholder="Provide your feedback"></textarea>
         <button onclick="submitFeedback()">Submit Feedback</button>
+        <button onclick="cancelFeedback()">Cancel</button>
     </div>
 
     <div id="share" class="container">
