--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         <button onclick="loadEvents()">Load Events</button>
     </div>
 
-    <div id="feedback" class="container">
+    <div id="feedback">
         <h2>Feedback</h2>
         <textarea id="feedbackInput" placeholder="Provide your feedback"></textarea>
-        <button onclick="submitFeedback()">Submit Feedback</button>
-        <button onclick="cancelFeedback()">Cancel</button>
+        <button onclick="showFeedbackDialog()">Submit Feedback</button>
     </div>
 
     <div id="share" class="container">
