--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button onclick="loadEvents()">Load Events</button>
     </div>
 
-    <div id="feedback">
+    <div id="feedback" class="container">
         <h2>Feedback</h2>
         <textarea id="feedbackInput" placeholder="Provide your feedback"></textarea>
         <button onclick="showFeedbackDialog()">Submit Feedback</button>
